--- a/style9.css
+++ b/style9.css
@@ -1,32 +1,84 @@
-.osn{
+.osn {
     background-color: rgb(51, 51, 51);
     width: 100%;
     height: 1500px;
     padding: 60px 0;
 }
-.ret{
+
+.ret {
     background-color: black;
     width: 100%;
     height: 75px;
-    
 }
-.text1{
+
+.text1 {
     color: white;
     width: 500px;
     height: 100px;
     margin-left: 850px;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
+
 h1 {
     margin: 0 auto;
 }
-h1::after {
+
+h1 span::after {
     content: "";
     position: absolute;
-    top: 150px;
-    right: 400px;
-    height: 8px;
-    width: 20px;
-    background-color: #4ec6ab;
-    width: 385px;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 70px;
+    background-color: #ffee00;
+    padding: 0px;
+}
+
+h1 span {
+    position: relative;
+}
+
+.speak {
+    width: 450px;
+}
+
+.box1 {}
+
+.box2 {
+    display: flex;
+}
+
+#footer {
+    left: 5px;
+    bottom: 5px;
+    /* Левый нижний угол */
+}
+
+.text2 {
+    color: white;
+    width: 500px;
+    height: 100px;
+    margin-left: 160px;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding-top: 10px;
+    margin-top: -36px;
+}
+
+.text3 {
+    color: white;
+    width: 500px;
+    height: 100px;
+    margin-left: 160px;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding-top: 10px;
+    margin-top: -1270px;
+}
+
+.text4 {
+    color: white;
+    width: 500px;
+    height: 100px;
+    margin-left: 850px;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-top: -100px;
 }
