--- a/style9.css
+++ b/style9.css
@@ -13,10 +13,11 @@
 
 .text1 {
     color: white;
-    width: 500px;
-    height: 100px;
-    margin-left: 850px;
+    width: 417px;
+    height: 75px;
+    margin-left: 464px;
     font-family: 'Roboto Condensed', sans-serif;
+    font-size: 14px;
 }
 
 h1 {
@@ -26,13 +27,13 @@ h1 {
 h1 span::after {
     content: "";
     position: absolute;
-    left: 14px;
+    left: 5px;
     bottom: 0;
-    height: 2px;
-    width: 70px;
+    height: 3px;
+    width: 50px;
     background-color: #ffee00;
     padding: 0px;
-    margin: -13px;
+    margin: -6px;
 }
 
 h1 span {
@@ -57,51 +58,56 @@ h1 span {
 
 .text2 {
     color: white;
-    width: 500px;
-    height: 100px;
-    margin-left: 160px;
+    width: 384px;
+    height: 76px;
+    margin-left: 65px;
     font-family: 'Roboto Condensed', sans-serif;
-    padding-top: 10px;
-    margin-top: -36px;
+    padding-top: -36px;
+    margin-top: 13px;
+    font-size: 13px;
 }
 
 .text3 {
     color: white;
     width: 500px;
     height: 100px;
-    margin-left: 160px;
+    margin-left: 66px;
     font-family: 'Roboto Condensed', sans-serif;
     padding-top: 10px;
     margin-top: -1270px;
+    font-size: 13px;
 }
 
 .text4 {
     color: white;
     width: 500px;
     height: 100px;
-    margin-left: 850px;
+    margin-left: 412px;
     font-family: 'Roboto Condensed', sans-serif;
     margin-top: -100px;
+    font-size: 13px;
 }
 .lil{
     width: 100%;
     height: 100px;
     color: gray;
-    padding-left: 560px;
+    padding-left: 280px;
     padding-top: 16px;
     font-family: 'Roboto Condensed', sans-serif;
+    font-size: 13px;
 }
 .knopka img{
     width: 100px;
     height: 100px;
 }
 .vivo{
-    padding-left: 269px;
-    margin-top: -50px;
+    padding-left: 224px;
+    margin-top: -42px;
 }
 .fakt{
-    padding-left: 1070px;
-    margin-top: -21px;
+    padding-left: 590px;
+    margin-top: -38px;
+    font-size:12px ;
 }
 .li::before{
     background: yellow;
